--- a/css/custom.css
+++ b/css/custom.css
@@ -5,8 +5,13 @@
 h1 {
     font-weight: 700;
 }
+h2 {
+    margin: 0;
+}
 p, li, a {
     font-weight: 400;
+    font-size: 1.2rem;
+    margin: 0;
 }
 img {
     max-width: 100%;
@@ -15,7 +20,14 @@ img {
 
 @media only screen and (min-width : 768px) {
 
-
+    .header {
+        padding: 100px 0;
+    }
+    .header h1,
+    .header ul,
+    .header p {
+        margin: 0 0 0 5%;
+    }
     .images {
         
     }
