--- a/css/custom.css
+++ b/css/custom.css
@@ -4,14 +4,17 @@
 }
 h1 {
     font-weight: 700;
+    font-size: 3rem;
+    text-transform: uppercase;
 }
 h2 {
     margin: 0;
+    text-transform: uppercase;
 }
 p, li, a {
     font-weight: 400;
     font-size: 1.2rem;
-    margin: 0;
+    margin:  0;
 }
 img {
     max-width: 100%;
@@ -26,7 +29,7 @@ img {
     .header h1,
     .header ul,
     .header p {
-        margin: 0 0 0 5%;
+        margin: .3% 0 0 5%;
     }
     .images {
         
@@ -40,6 +43,7 @@ img {
     }      
     .info {
         text-align: left;
+        padding: 35px 0 0 0;
     }
     .header ul {
         padding:0;
@@ -58,6 +62,15 @@ img {
     .header a {
         text-decoration: none;
         color: inherit;
+    }
+    .project-1 {
+    }
+    .project {
+        padding: 100px 0;        
+    }
+    .dark {
+        padding: 100px 0;
+        background-color: #f2f2f2;
     }
 
 }
