--- a/css/custom.css
+++ b/css/custom.css
@@ -28,6 +28,67 @@ img {
     background-color: #f2f2f2;
 }
 
+/* Links */
+
+a {
+  position: relative;
+  outline: none;
+  color: #FFF;
+  text-decoration: none;
+}
+
+
+a:hover::before, 
+a:hover::after, 
+a:focus::before, 
+a:focus::after {
+  opacity: 1;
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px);
+}
+
+a:hover::before, 
+a:hover::after, 
+a:focus::before, 
+a:focus::after {
+  opacity: 1;
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px);
+}
+
+a::before {
+  margin-right: 10px;
+  content: '[';
+  -webkit-transform: translateX(20px);
+  -moz-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+
+a::after {
+  margin-left: 10px;
+  content: ']';
+  -webkit-transform: translateX(-20px);
+  -moz-transform: translateX(-20px);
+  transform: translateX(-20px);
+}
+a::before, 
+a::after {
+  display: inline-block;
+  opacity: 0;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+  transition: transform 0.3s, opacity 0.2s;
+}
+
+*, *:after, *::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 
 @media only screen and (min-width : 768px) {
 
@@ -60,6 +121,7 @@ img {
         list-style: none;
         display: inline-block;
         color: #777;
+        margin-left: -15px;
     }
     .header li:nth-child(2),
     .header li:nth-child(3) {        
@@ -68,7 +130,6 @@ img {
         border-left: 1px solid #ddd;
     }
     .header a {
-        text-decoration: none;
         color: inherit;
     }
     .project-1 {
