--- a/css/custom.css
+++ b/css/custom.css
@@ -35,6 +35,7 @@ a {
   outline: none;
   text-decoration: none;
   padding-bottom: 3px;
+  color: #56BFF5;
 }
 
 a::after {
@@ -103,9 +104,6 @@ a:focus::after {
         padding-left: 10px;
         margin-left: 10px;
         border-left: 1px solid #ddd;
-    }
-    .header a {
-        color: inherit;
     }
     .project-1 {
     }
