--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@ h1 {
     text-transform: uppercase;
 }
 h2 {
-    margin: 0;
+    margin: 30px 0 0 0;
     text-transform: uppercase;
 }
 p, li, a {
@@ -25,10 +25,9 @@ img {
     padding: 100px 0;        
 }
 .dark {
-    padding: 100px 0;
-    background-color: #f2f2f2;
+  padding: 10px 0 40px;
+  background-color: #f2f2f2;
 }
-
 /* Links */
 
 a {
@@ -100,7 +99,9 @@ a:focus::after {
 
 @media only screen and (min-width : 768px) {
 
-
+    h2 {
+      margin: 0;
+    }
     .mobile {
       padding: 0;
     }
@@ -110,7 +111,9 @@ a:focus::after {
     .info {
       
     }
-
+    .dark {
+        padding: 100px 0;    
+    }
 
     .header {
         padding: 100px 0 0;
