--- a/css/custom.css
+++ b/css/custom.css
@@ -94,7 +94,8 @@ a:focus::after {
     color: #777;
 }
 .header li:nth-child(2),
-.header li:nth-child(3) {        
+.header li:nth-child(3),        
+.header li:nth-child(4) {        
     padding-left: 10px;
     margin-left: 10px;
     border-left: 1px solid #ddd;
