--- a/greater/css/grayscale.css
+++ b/greater/css/grayscale.css
@@ -126,12 +126,14 @@ a:focus {
     background: black;
   }
   .navbar-custom.top-nav-collapse .navbar-brand {
-    background-position: 0 center;
+    background-position: 100px center;
   }
   .navbar-custom .navbar-brand {
     font-weight: 700;
-    background: url(../img/greater-logo.svg) 0 -100px no-repeat transparent;
+    background: url(../img/greater-logo.svg) 100px -100px no-repeat transparent;
     padding: 15px 15px 15px 65px;
+    text-indent: -999999px;
+    overflow: hidden;
   }
   .navbar-custom .navbar-brand:focus {
     outline: none;
@@ -385,10 +387,9 @@ p b {
 }
 .who-section #people div {
   width: 50%;
-  display: inline-block;
   margin: 0;
   float: left;
-  height: 220px;
+  height: 300px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -396,8 +397,10 @@ p b {
   background-position: center center;
   position: relative;
   overflow: hidden;
+  display: inline-block;
 }
-.who-section #people div:hover span {
+.who-section #people div:hover span,
+.who-section #people div:focus span {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
@@ -417,21 +420,25 @@ p b {
   left: 0;
   right: 0;
   bottom: 0;
-  padding-top: 120px;
+  padding: 15% 10% 15%;
   background: url(../img/lines-small.svg) right center rgba(0, 0, 0, 0.75);
   -webkit-transition: all 0.1s linear;
   -moz-transition: all 0.1s linear;
   -ms-transition: all 0.1s linear;
   -o-transition: all 0.1s linear;
   opacity: 0;
+  vertical-align: middle;
 }
 .who-section #people div span p {
   margin-bottom: 0;
 }
+.who-section #people div p {
+  font-size: 13px;
+}
 .who-section #people div h4 {
   position: relative;
   margin-bottom: 60px;
-  font-size: 30px;
+  font-size: 20px;
 }
 .who-section #people div h4:after {
   content: "";
@@ -459,10 +466,10 @@ p b {
   background-image: url(../img/5-mitchell.jpg);
 }
 .who-section #people .pax-6 {
-  background-image: url(../img/6-david.jpg);
+  background-image: url(../img/7-dave.jpg);
 }
 .who-section #people .pax-7 {
-  background-image: url(../img/7-dave.jpg);
+  background-image: url(../img/6-david.jpg);
 }
 .who-section #people .pax-8 {
   background-image: url(../img/8-sharon.jpg);
@@ -471,6 +478,18 @@ p b {
   .who-section #people div {
     width: 25%;
     height: 400px;
+    display: table;
+  }
+  .who-section #people div span {
+    padding: 0 60px;
+    display: table-cell;
+    position: static;
+  }
+  .who-section #people div p {
+    font-size: 15px;
+  }
+  .who-section #people div h4 {
+    font-size: 30px;
   }
 }
 #sponsors {
@@ -484,7 +503,7 @@ p b {
 }
 #sponsors a {
   display: inline-block;
-  margin: 30px;
+  margin: 10px 30px;
   -webkit-transform-origin: center center;
   -moz-transform-origin: center center;
   -ms-transform-origin: center center;
@@ -499,6 +518,9 @@ p b {
 @media (min-width: 768px) {
   #sponsors {
     padding: 150px 0;
+  }
+  #sponsors a {
+    margin: 30px;
   }
 }
 #how {
@@ -564,6 +586,11 @@ p b {
 #movement .movement-quote p {
   margin-bottom: 120px;
 }
+#movement #movement-dots {
+  position: absolute;
+  top: 260px;
+  right: 65px;
+}
 @media (min-width: 768px) {
   #movement {
     padding-top: 150px;
@@ -574,11 +601,16 @@ p b {
   width: 100%;
   height: auto;
 }
-#story .col-lg-6 {
+#story .story-right {
   padding-top: 50px;
 }
 #story .story-pic {
   display: none;
+}
+#story #story-dots {
+  position: absolute;
+  left: 190px;
+  top: -40px;
 }
 @media (min-width: 768px) {
   #story {
