--- a/greater/css/grayscale.css
+++ b/greater/css/grayscale.css
@@ -67,6 +67,10 @@ a:focus {
   font-family: "futura-pt", sans-serif;
   font-size: 12px;
 }
+.navbar-custom .navbar-brand {
+  text-indent: -999999px;
+  overflow: hidden;
+}
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
@@ -130,13 +134,16 @@ a:focus {
   }
   .navbar-custom .navbar-brand {
     font-weight: 700;
-    background: url(../img/greater-logo.svg) 100px -100px no-repeat transparent;
+    background: url('../img/greater-logo.svg') 100px -100px no-repeat transparent;
     padding: 15px 15px 15px 65px;
-    text-indent: -999999px;
-    overflow: hidden;
   }
   .navbar-custom .navbar-brand:focus {
     outline: none;
+  }
+}
+@media (max-width: 768px) {
+  .navbar-custom {
+    background-color: transparent;
   }
 }
 @media (max-width: 968px) {
@@ -188,9 +195,6 @@ a:focus {
 }
 .intro #join {
   text-align: left;
-  position: absolute;
-  left: 260px;
-  top: 270px;
 }
 .intro #join a {
   display: block;
@@ -275,6 +279,11 @@ a:focus {
   .intro .intro-body .intro-text {
     font-size: 26px;
   }
+  .intro #join {
+    position: absolute;
+    left: 260px;
+    top: 110px;
+  }
 }
 @media (max-width: 768px) {
   .intro {
@@ -283,6 +292,17 @@ a:focus {
   .intro video {
     min-height: auto;
     top: auto;
+  }
+  .intro #join {
+    width: 210px;
+    padding-left: 60px;
+    margin: 30px auto 0 auto;
+  }
+  .intro #greaterLogo {
+    position: absolute;
+    top: -200px;
+    right: 230px;
+    transform: scale(0.5);
   }
 }
 h2.big {
@@ -351,8 +371,8 @@ p b {
 }
 #about h2.page-number:before {
   content: "#002";
-  top: -100px;
-  left: 200px;
+  top: -20px;
+  right: 0px;
 }
 #about .about-left {
   background: url(../img/slashes.svg) no-repeat right 20px transparent;
@@ -360,6 +380,10 @@ p b {
 @media (min-width: 768px) {
   #about {
     padding-top: 150px;
+  }
+  #about h2.page-number:before {
+    top: -100px;
+    left: 200px;
   }
 }
 .general p.black b {
@@ -382,8 +406,9 @@ p b {
 }
 .who-section h2.page-number:before {
   content: "#003";
-  top: 160px;
-  left: 320px;
+  top: -30px;
+  left: auto;
+  right: 2px;
 }
 .who-section #people div {
   width: 50%;
@@ -466,10 +491,10 @@ p b {
   background-image: url(../img/5-mitchell.jpg);
 }
 .who-section #people .pax-6 {
-  background-image: url(../img/7-dave.jpg);
+  background-image: url(../img/6-david.jpg);
 }
 .who-section #people .pax-7 {
-  background-image: url(../img/6-david.jpg);
+  background-image: url(../img/7-dave.jpg);
 }
 .who-section #people .pax-8 {
   background-image: url(../img/8-sharon.jpg);
@@ -490,6 +515,11 @@ p b {
   }
   .who-section #people div h4 {
     font-size: 30px;
+  }
+  .who-section h2.page-number:before {
+    top: 160px;
+    left: 320px;
+    right: auto;
   }
 }
 #sponsors {
@@ -566,6 +596,10 @@ p b {
   content: '03';
 }
 @media (max-width: 768px) {
+  #how {
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
   #how .how-right h3 {
     padding-left: 90px;
     margin-top: 50px;
@@ -573,6 +607,9 @@ p b {
   #how .how-right h3:after {
     left: 0px;
     top: -20px;
+  }
+  #how h2.page-number:before {
+    left: 10px;
   }
 }
 #movement .movement-quote {
@@ -586,6 +623,9 @@ p b {
 #movement .movement-quote p {
   margin-bottom: 120px;
 }
+#movement .movement-quote img {
+  display: none;
+}
 #movement #movement-dots {
   position: absolute;
   top: 260px;
@@ -595,6 +635,9 @@ p b {
   #movement {
     padding-top: 150px;
     padding-bottom: 150px;
+  }
+  #movement img {
+    display: block;
   }
 }
 #story img {
