--- a/greater/css/grayscale.css
+++ b/greater/css/grayscale.css
@@ -143,7 +143,7 @@ a:focus {
 }
 @media (max-width: 768px) {
   .navbar-custom {
-    background-color: transparent;
+    display: none;
   }
 }
 @media (max-width: 968px) {
