--- a/greater/css/grayscale.css
+++ b/greater/css/grayscale.css
@@ -863,3 +863,8 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+@media (max-width: 768px) {
+  section {
+    overflow-x: hidden;
+  }
+}
