--- a/greater/less/mixins.less
+++ b/greater/less/mixins.less
@@ -1,4 +1,4 @@
-//  Mixins
+//  K's special mixins
 
 
 .background-cover(@cover) {
@@ -34,7 +34,12 @@
 	-o-transform-origin:      @x @y;
 }
 
-
+.rotate (@deg) {
+	-webkit-transform: rotate(@deg);
+	-moz-transform: 	 rotate(@deg);
+	-ms-transform: 		 rotate(@deg);
+	-o-transform: 		 rotate(@deg);
+}
 
 
 .transition (@transition) {
