--- a/greater/less/greater-main.less
+++ b/greater/less/greater-main.less
@@ -303,8 +303,7 @@ mark {
         height: auto;
         top: 50%;
         left: 50%;
-        -webkit-transform: translateX(-50%) translateY(-50%);
-        transform: translateX(-50%) translateY(-50%);
+        .translate(-50%,-50%);
         background: url(../images/fallback.png) no-repeat;
         background-size: cover;
         -webkit-filter: grayscale(1);
