Updated footer text

--- a/greater/css/greater-main.css
+++ b/greater/css/greater-main.css
@@ -914,6 +914,11 @@ p b {
   text-align: center;
   padding: 30px;
 }
+#connect p {
+  text-align: left;
+  color: white;
+  margin: 60px 0 50px;
+}
 #connect svg {
   transform: scale(1.4);
   margin: 0 10px;
