--- a/greater/less/greater-main.less
+++ b/greater/less/greater-main.less
@@ -961,6 +961,11 @@ p {
     background-color: #5F5F5F;
     text-align: center;
     padding: 30px;
+    p {
+        text-align: left;
+        color: white;
+        margin: 60px 0 50px;
+    }
     svg {
         transform: scale(1.4);
         margin: 0 10px;        
