--- a/greater/less/greater-main.less
+++ b/greater/less/greater-main.less
@@ -980,7 +980,7 @@ p {
         }
     }
     @media(min-width:767px) {
-        padding: 100px;
+        padding: 100px 0;
     }
 }
 
@@ -1022,6 +1022,29 @@ ul.banner-social-buttons {
             }
         }
     }
+}
+
+#donate {
+    padding: 100px 0;
+    background-color: black;
+    text-align: center;
+    a.btn-default:hover, 
+    a.btn-default:focus {
+        border: 5px solid #dddddd;
+        outline: none;
+        color: black;
+        background-color: #dddddd;
+    }
+    a.btn {
+        font-family: @headline;
+        padding: 10px 90px;
+        border-color: #9B9B9B;
+        border: 5px solid #dddddd;
+        outline: none;
+        color: white;
+        background-color: transparent;
+    }
+
 }
 
 footer {
